--- a/finter-html/clients.html
+++ b/finter-html/clients.html
@@ -42,26 +42,25 @@
     <div class="hero_bg_box">
         <img src="images/bigseria.jpg" alt="background">
     </div>
-    <!-- header section strats -->
+
+    <!-- header contact section strats -->
     <header class="header_section">
         <div class="header_top">
             <div class="container-fluid header_top_container">
-
                 <div class="contact_nav">
-                    <a href="tel:+380994218007">
+                    <a href="tel:+380994218007" aria-hidden="true">
                         <i class="fa fa-phone" aria-hidden="true"></i>
                         <span>
                 +38(099) 421 80 07
               </span>
                     </a>
-                    <a href="mailto:m.gronskaya@fieldforce.consulting">
+                    <a href="mailto:m.gronskaya@fieldforce.consulting" aria-hidden="true">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span>
-                m.gronskaya@fieldforce.consulting
-              </span>
+                        <span>m.gronskaya@fieldforce.consulting</span>
                     </a>
                 </div>
 
+                <!--social box-->
                 <!--                <div class="social_box">
                                     <a href="">
                                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -76,10 +75,11 @@
                                         <i class="fa fa-instagram" aria-hidden="true"></i>
                                     </a>
                                 </div>-->
-
-
             </div>
         </div>
+        <!-- header contact section ends -->
+
+        <!-- header nav section starts -->
         <div class="header_bottom">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -94,20 +94,20 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  ">
                             <li class="nav-item ">
-                                <a class="nav-link" href="index.html">Головна</a>
+                                <a class="nav-link" href="index.html" aria-label="Main page">Головна</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">Наші послуги</a>
+                                <a class="nav-link" href="about.html" aria-label="Our services">Наші послуги</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="clients.html" aria-label="Our clients">Наші клієнти</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="team.html" aria-label="Our team">Команда</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="clients.html">Наші клієнти<span
+                                <a class="nav-link" href="contact.html" aria-label="Contact information">Контакти<span
                                         class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="team.html">Команда</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Контакти</a>
                             </li>
                         </ul>
                     </div>
@@ -115,7 +115,8 @@
             </div>
         </div>
     </header>
-    <!-- end header section -->
+</div>
+<!-- end header section -->
 
 </div>
 
@@ -127,24 +128,25 @@
             <h1 class="pb-3 text-center">
                 Наші клієнти
             </h1>
-            </div>
-            <p>Досвід роботи з брендами Honda, Hyundai, Citroen, Mazda, Suzuki, Renault, Mercedes Benz, Ford, Nissan,
-                John Deere, Claas, Subaru, ПриватБанк, Backstage, Pottinger, Opel, Skoda та іншими.
-            </p>
-            <p><strong>Географія проектів:</strong></p>
-            <ul class="text-left">
-                <li>Україна</li>
-                <li>Польща</li>
-                <li>Литва</li>
-                <li>Угорщина</li>
-                <li>Білорусь</li>
-                <li>Молдова</li>
-                <li>Азербайджан</li>
-                <li>Казахстан</li>
-            </ul>
-            <p class="text-center pt-3">Експерти <strong>Field Force Consulting</strong> реалізували багато проектів різних масштабів з такими
-                компаніями:
-            </p>
+        </div>
+        <p>Досвід роботи з брендами Honda, Hyundai, Citroen, Mazda, Suzuki, Renault, Mercedes Benz, Ford, Nissan,
+            John Deere, Claas, Subaru, ПриватБанк, Backstage, Pottinger, Opel, Skoda та іншими.
+        </p>
+        <p><strong>Географія проектів:</strong></p>
+        <ul class="text-left">
+            <li>Україна</li>
+            <li>Польща</li>
+            <li>Литва</li>
+            <li>Угорщина</li>
+            <li>Білорусь</li>
+            <li>Молдова</li>
+            <li>Азербайджан</li>
+            <li>Казахстан</li>
+        </ul>
+        <p class="text-center pt-3">Експерти <strong>Field Force Consulting</strong> реалізували багато проектів різних
+            масштабів з такими
+            компаніями:
+        </p>
 
 
         <div id="carouselExample2Controls" class="carousel slide" data-ride="carousel">
@@ -314,7 +316,7 @@
 
         <div class="info_bottom">
             <div class="row">
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
                             Про компанію
@@ -328,7 +330,7 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
                             КОНТАКТИ
@@ -349,34 +351,34 @@
                 </div>
 
 
-                <div class="col">
+                <div class="col-md-4 col-sm-12">
                     <div class="">
                         <h5>
                             Сайт
                         </h5>
                         <ul class="info_menu">
                             <li>
-                                <a href="index.html">
+                                <a href="index.html" aria-label="Main page">
                                     Головна
                                 </a>
                             </li>
                             <li>
-                                <a href="about.html">
+                                <a href="about.html" aria-label="Our services">
                                     Наші послуги
                                 </a>
                             </li>
                             <li>
-                                <a href="clients.html">
+                                <a href="clients.html" aria-label="Our clients">
                                     Наші клієнти
                                 </a>
                             </li>
                             <li>
-                                <a href="team.html">
+                                <a href="team.html" aria-label="Our team">
                                     Команда
                                 </a>
                             </li>
                             <li class="mb-0">
-                                <a href="contact.html">
+                                <a href="contact.html" aria-label="Contact information">
                                     Контакти
                                 </a>
                             </li>
