--- a/finter-html/contact.html
+++ b/finter-html/contact.html
@@ -42,22 +42,26 @@
     <div class="hero_bg_box">
         <img src="images/bigseria.jpg" alt="background">
     </div>
-    <!-- header section strats -->
+
+
+    <!-- header contact section strats -->
     <header class="header_section">
         <div class="header_top">
             <div class="container-fluid header_top_container">
                 <div class="contact_nav">
-                    <a href="tel:+380994218007">
+                    <a href="tel:+380994218007" aria-hidden="true">
                         <i class="fa fa-phone" aria-hidden="true"></i>
                         <span>
                 +38(099) 421 80 07
               </span>
                     </a>
-                    <a href="mailto:m.gronskaya@fieldforce.consulting">
+                    <a href="mailto:m.gronskaya@fieldforce.consulting" aria-hidden="true">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
                         <span>m.gronskaya@fieldforce.consulting</span>
                     </a>
                 </div>
+
+                <!--social box-->
                 <!--                <div class="social_box">
                                     <a href="">
                                         <i class="fa fa-facebook" aria-hidden="true"></i>
@@ -74,6 +78,9 @@
                                 </div>-->
             </div>
         </div>
+        <!-- header contact section ends -->
+
+        <!-- header nav section starts -->
         <div class="header_bottom">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -88,19 +95,19 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  ">
                             <li class="nav-item ">
-                                <a class="nav-link" href="index.html">Головна</a>
+                                <a class="nav-link" href="index.html" aria-label="Main page">Головна</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">Наші послуги</a>
+                                <a class="nav-link" href="about.html" aria-label="Our services">Наші послуги</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="clients.html">Наші клієнти</a>
+                                <a class="nav-link" href="clients.html" aria-label="Our clients">Наші клієнти</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="team.html">Команда</a>
+                                <a class="nav-link" href="team.html" aria-label="Our team">Команда</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="contact.html">Контакти<span
+                                <a class="nav-link" href="contact.html" aria-label="Contact information">Контакти<span
                                         class="sr-only">(current)</span></a>
                             </li>
                         </ul>
@@ -109,63 +116,76 @@
             </div>
         </div>
     </header>
-    <!-- end header section -->
 </div>
+<!-- end header section -->
 
 <!-- contact section -->
 <section class="contact_section layout_padding">
     <div class="container">
         <div class="heading_container heading_center">
-            <h1>
+            <h1 aria-label="Contact info">
                 Контакти
             </h1>
         </div>
 
         <div class="container ">
             <div class="row justify-content-start">
-                <div class="col-12 col-lg ">
+                <div class="col-12 col-lg text-center text-lg-left">
                     <img class="my-3" src="./images/logo.png" alt="logo">
                     <address>
                         <p>
                             <strong>ТОВ "ФІЛД ФОРС КОНСАЛТИНГ"</strong>
                         </p>
                         <p>
-                           02095, Україна, Київ, <br>вул. Княжий Затон, 9А, офіс 369.
+                            02095, Україна, Київ, <br>вул. Княжий Затон, 9А, офіс 369.
                         </p>
-                        <p class="pt-3"><a href="tel:+380994218007">+38(099) 421 80 07</a></p>
+                        <p class="pt-3" aria-label="Contact phone"><a href="tel:+380994218007">+38(099) 421 80 07</a>
+                        </p>
                         <a href="mailto:m.gronskaya@fieldforce.consulting">
                             <span>m.gronskaya@fieldforce.consulting</span>
                         </a>
                     </address>
                 </div>
 
-                <div class="col-12 col-lg-7 ">
-                    <div class="form_container">
+                <div class="col-12 col-lg-7 " role="form" id="contact-info"
+                     aria-label="Fill the form, so we can get back to you">
+                    <div class="form_container ">
                         <h2 class="mt-4 text-center">Написати нам</h2>
                         <p class="pb-2 text-center">Ми відкриті для питань і уточнень</p>
                         <form action="">
                             <div class="form-row justify-content-start">
                                 <div class="form-group col">
-                                    <input type="text" class="form-control" placeholder="Ім'я та прізвище"/>
+                                    <label for="nameField" class="is-hidden"></label><input
+                                        id="nameField" type="text" class="form-control" placeholder="Ім'я та прізвище"
+                                        aria-label="Enter your name"/>
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-group col">
-                                    <input type="text" class="form-control" placeholder="Номер телефону"/>
+                                    <label for="phoneField" class="is-hidden"></label><input
+                                        id="phoneField" type="text" class="form-control" placeholder="Номер телефону"
+                                        aria-label="Enter your phone number"/>
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-group col">
-                                    <input type="email" class="form-control" placeholder="E-mail"/>
+                                    <label for="mailField" class="is-hidden"></label><input id="mailField"
+                                                                                                          type="email"
+                                                                                                          class="form-control"
+                                                                                                          placeholder="E-mail"
+                                                                                                          required
+                                                                                                          aria-label="Enter your e-mail"/>
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-group col">
-                                    <input type="text" class="message-box form-control" placeholder="Текст листа"/>
+                                    <label for="textField" class="is-hidden"></label><input
+                                        id="textField" type="text" class="message-box form-control"
+                                        placeholder="Текст листа" aria-label="Enter additional text"/>
                                 </div>
                             </div>
                             <div class="btn_box">
-                                <button>
+                                <button aria-label="Send contact info">
                                     НАДІСЛАТИ
                                 </button>
                             </div>
@@ -178,12 +198,13 @@
 </section>
 
 <!--Map-->
-<div class="container-fluid">
-    <div class="row">
+<div class="container-fluid " aria-hidden="true">
+    <div class="row" >
         <div class="col map">
-            <iframe class="map"
+            <iframe aria-hidden="true" class="map"
                     src="https://www.google.com/maps/d/u/0/embed?mid=1Teb6LQQ4XvvEBqw7Jxmj1bKKS5K51Xc&ehbc=2E312F"
-                    height="500px"></iframe>
+                    height="500px"
+                    ></iframe>
         </div>
     </div>
 </div>
@@ -238,27 +259,27 @@
                         </h5>
                         <ul class="info_menu">
                             <li>
-                                <a href="index.html">
+                                <a href="index.html" aria-label="Main page">
                                     Головна
                                 </a>
                             </li>
                             <li>
-                                <a href="about.html">
+                                <a href="about.html" aria-label="Our services">
                                     Наші послуги
                                 </a>
                             </li>
                             <li>
-                                <a href="clients.html">
+                                <a href="clients.html" aria-label="Our clients">
                                     Наші клієнти
                                 </a>
                             </li>
                             <li>
-                                <a href="team.html">
+                                <a href="team.html" aria-label="Our team">
                                     Команда
                                 </a>
                             </li>
                             <li class="mb-0">
-                                <a href="contact.html">
+                                <a href="contact.html" aria-label="Contact information">
                                     Контакти
                                 </a>
                             </li>
