--- a/finter-html/index.html
+++ b/finter-html/index.html
@@ -42,41 +42,44 @@
     <div class="hero_bg_box">
         <img src="images/bigseria.jpg" alt="background">
     </div>
-    <!-- header section strats -->
+
+    <!-- header contact section strats -->
     <header class="header_section">
         <div class="header_top">
             <div class="container-fluid header_top_container">
-
                 <div class="contact_nav">
-                    <a href="tel:+380994218007">
+                    <a href="tel:+380994218007" aria-hidden="true">
                         <i class="fa fa-phone" aria-hidden="true"></i>
                         <span>
                 +38(099) 421 80 07
               </span>
                     </a>
-                    <a href="mailto:m.gronskaya@fieldforce.consulting">
+                    <a href="mailto:m.gronskaya@fieldforce.consulting" aria-hidden="true">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span>
-                m.gronskaya@fieldforce.consulting
-              </span>
+                        <span>m.gronskaya@fieldforce.consulting</span>
                     </a>
                 </div>
-                <!-- <div class="social_box">
-                     <a href="">
-                         <i class="fa fa-facebook" aria-hidden="true"></i>
-                     </a>
-                     <a href="">
-                         <i class="fa fa-twitter" aria-hidden="true"></i>
-                     </a>
-                     <a href="">
-                         <i class="fa fa-linkedin" aria-hidden="true"></i>
-                     </a>
-                     <a href="">
-                         <i class="fa fa-instagram" aria-hidden="true"></i>
-                     </a>
-                 </div>-->
+
+                <!--social box-->
+                <!--                <div class="social_box">
+                                    <a href="">
+                                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                                    </a>
+                                </div>-->
             </div>
         </div>
+        <!-- header contact section ends -->
+
+        <!-- header nav section starts -->
         <div class="header_bottom">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -90,20 +93,21 @@
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  ">
+                            <li class="nav-item ">
+                                <a class="nav-link" href="index.html" aria-label="Main page">Головна</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="about.html" aria-label="Our services">Наші послуги</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="clients.html" aria-label="Our clients">Наші клієнти</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="team.html" aria-label="Our team">Команда</a>
+                            </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="index.html">Головна<span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html">Наші послуги</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="clients.html">Наші клієнти</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="team.html">Команда</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Контакти</a>
+                                <a class="nav-link" href="contact.html" aria-label="Contact information">Контакти<span
+                                        class="sr-only">(current)</span></a>
                             </li>
                         </ul>
                     </div>
@@ -111,7 +115,9 @@
             </div>
         </div>
     </header>
-    <!-- end header section -->
+</div>
+<!-- end header section -->
+
     <!-- slider section -->
     <section class="slider_section ">
         <div id="customCarousel1" class="carousel slide" data-ride="carousel">
@@ -704,27 +710,27 @@
                         </h5>
                         <ul class="info_menu">
                             <li>
-                                <a href="index.html">
+                                <a href="index.html" aria-label="Main page">
                                     Головна
                                 </a>
                             </li>
                             <li>
-                                <a href="about.html">
+                                <a href="about.html" aria-label="Our services">
                                     Наші послуги
                                 </a>
                             </li>
                             <li>
-                                <a href="clients.html">
+                                <a href="clients.html" aria-label="Our clients">
                                     Наші клієнти
                                 </a>
                             </li>
                             <li>
-                                <a href="team.html">
+                                <a href="team.html" aria-label="Our team">
                                     Команда
                                 </a>
                             </li>
                             <li class="mb-0">
-                                <a href="contact.html">
+                                <a href="contact.html" aria-label="Contact information">
                                     Контакти
                                 </a>
                             </li>
