--- a/finter-html/team.html
+++ b/finter-html/team.html
@@ -42,45 +42,44 @@
     <div class="hero_bg_box">
         <img src="images/bigseria.jpg" alt="background">
     </div>
-    <!-- header section strats -->
+
+    <!-- header contact section strats -->
     <header class="header_section">
         <div class="header_top">
             <div class="container-fluid header_top_container">
-
                 <div class="contact_nav">
-                    <a href="tel:+380994218007">
+                    <a href="tel:+380994218007" aria-hidden="true">
                         <i class="fa fa-phone" aria-hidden="true"></i>
                         <span>
                 +38(099) 421 80 07
               </span>
                     </a>
-                    <a href="mailto:m.gronskaya@fieldforce.consulting">
+                    <a href="mailto:m.gronskaya@fieldforce.consulting" aria-hidden="true">
                         <i class="fa fa-envelope" aria-hidden="true"></i>
-                        <span>
-                m.gronskaya@fieldforce.consulting
-              </span>
+                        <span>m.gronskaya@fieldforce.consulting</span>
                     </a>
                 </div>
-                <!--
-                        social box
-                -->
-                <!--          <div class="social_box">
-                            <a href="">
-                              <i class="fa fa-facebook" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                              <i class="fa fa-twitter" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                              <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            </a>
-                            <a href="">
-                              <i class="fa fa-instagram" aria-hidden="true"></i>
-                            </a>
-                          </div>-->
 
+                <!--social box-->
+                <!--                <div class="social_box">
+                                    <a href="">
+                                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                    </a>
+                                    <a href="">
+                                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                                    </a>
+                                </div>-->
             </div>
         </div>
+        <!-- header contact section ends -->
+
+        <!-- header nav section starts -->
         <div class="header_bottom">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
@@ -95,29 +94,29 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav  ">
                             <li class="nav-item ">
-                                <a class="nav-link" href="index.html">Головна</a>
+                                <a class="nav-link" href="index.html" aria-label="Main page">Головна</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about.html">Наші послуги</a>
+                                <a class="nav-link" href="about.html" aria-label="Our services">Наші послуги</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="clients.html">Наші клієнти</a>
+                                <a class="nav-link" href="clients.html" aria-label="Our clients">Наші клієнти</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="team.html" aria-label="Our team">Команда</a>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="team.html">Команда<span class="sr-only">(current)</span> </a>
+                                <a class="nav-link" href="contact.html" aria-label="Contact information">Контакти<span
+                                        class="sr-only">(current)</span></a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contact.html">Контакти</a>
-                            </li>
-                            <li class="nav-item">
                         </ul>
                     </div>
                 </nav>
             </div>
         </div>
     </header>
-    <!-- end header section -->
 </div>
+<!-- end header section -->
 <!--  team section -->
 
 <section class="team_section layout_padding">
@@ -149,10 +148,10 @@
         </ul>
 
         <div class="card-deck">
-            <div class="row mx-lg-n5 mx-auto">
+            <div class="row mx-lg-n5 mx-auto justify-content-between">
 
                 <div class="col-xl-4 col-md-6 mx-auto px-lg-2 my-4" style="max-width: 480px">
-                    <div class="card mr-5  bg-light h-100">
+                    <div class="card bg-light h-100">
                         <img src="images/team/vyacheslav.jpg" class="card-img-top" alt="team member">
                         <div class="card-body">
                             <h5 class="card-title" style="color: #004445"><strong>ШОСТАК ВЯЧЕСЛАВ</strong></h5>
@@ -166,7 +165,7 @@
                 </div>
 
                 <div class="col-xl-4 col-md-6 mx-auto px-lg-2 my-4" style="max-width: 480px">
-                    <div class="card mr-5  bg-light h-100">
+                    <div class="card bg-light h-100">
                         <img src="images/team/maria.jpg" class="card-img-top" alt="team member">
                         <div class="card-body">
                             <h5 class="card-title" style="color: #004445"><strong>ГРОНСЬКА МАРІЯ</strong></h5>
@@ -179,7 +178,7 @@
                 </div>
 
                 <div class="col-xl-4 col-md-6 mx-auto px-lg-2 my-4" style="max-width: 480px">
-                    <div class="card mr-5 bg-light h-100">
+                    <div class="card  bg-light h-100">
                         <img src="images/team/cat.jpg" class="card-img-top" alt="team member">
                         <div class="card-body">
                             <h5 class="card-title" style="color: #004445"><strong>ШОСТАК ВОЛЬТ</strong></h5>
@@ -200,10 +199,9 @@
 <!-- info section -->
 <section class="info_section ">
     <div class="container">
+
         <div class="info_bottom">
-            <div class="row justify-content-around">
-
-
+            <div class="row">
                 <div class="col-md-4 col-sm-12">
                     <div class="info_detail">
                         <h5>
@@ -246,27 +244,27 @@
                         </h5>
                         <ul class="info_menu">
                             <li>
-                                <a href="index.html">
+                                <a href="index.html" aria-label="Main page">
                                     Головна
                                 </a>
                             </li>
                             <li>
-                                <a href="about.html">
+                                <a href="about.html" aria-label="Our services">
                                     Наші послуги
                                 </a>
                             </li>
                             <li>
-                                <a href="clients.html">
+                                <a href="clients.html" aria-label="Our clients">
                                     Наші клієнти
                                 </a>
                             </li>
                             <li>
-                                <a href="team.html">
+                                <a href="team.html" aria-label="Our team">
                                     Команда
                                 </a>
                             </li>
                             <li class="mb-0">
-                                <a href="contact.html">
+                                <a href="contact.html" aria-label="Contact information">
                                     Контакти
                                 </a>
                             </li>
